# dilbot

./: Dockerfile  fly.toml  pyproject.toml
src/dilbot/: bot.py  gpt.py
