[tool.poetry]
name = "dilbot"
version = "0.1.0"
description = ""
authors = ["Max Bussiere <max@3digit.dev>"]

[tool.poetry.scripts]
bot = "dilbot.bot:main"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "1.6.0"
dacite = "^1.8.0"
openai = "^0.27.2"
google = "^3.0.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
